--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-number-format": "^5.4.2",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
